--- a/build.gradle
+++ b/build.gradle
@@ -3,14 +3,12 @@ buildscript {
         jcenter()
     }
     dependencies {
-	classpath 'com.android.tools.build:gradle:2.1.2'
+        classpath 'com.android.tools.build:gradle:2.1.3'
+        classpath 'com.novoda:bintray-release:0.3.4'
     }
 }
 
 allprojects {
-    version = VERSION_NAME
-    group = GROUP
-
     repositories {
         jcenter()
     }
