--- a/extras-toolbar/build.gradle
+++ b/extras-toolbar/build.gradle
@@ -22,4 +22,4 @@ dependencies {
     compile 'com.android.support:appcompat-v7:24.2.0'
 }
 
-apply from: '../maven_push.gradle'
+apply from: '../bintray_push.gradle'
