--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -2,37 +2,20 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 24
-    buildToolsVersion "24.0.1"
+    buildToolsVersion "24.0.2"
 
     defaultConfig {
         applicationId "com.balysv.materialmenu.demo"
         minSdkVersion 14
         targetSdkVersion 24
         versionCode 1
-        versionName "1.0"
-    }
-
-    productFlavors {
-        stock {
-            applicationId "com.balysv.materialmenu.demo.stock"
-            resValue "string", "app_name", "Material menu - stock"
-        }
-        toolbar {
-            applicationId "com.balysv.materialmenu.demo.toolbar"
-            resValue "string", "app_name", "Material menu - toolbar"
-        }
-        abc_v21 {
-            applicationId "com.balysv.materialmenu.demo.abc_v21"
-            resValue "string", "app_name", "Material menu - abc_v21"
-        }
+        versionName "2.0"
     }
 }
 
 dependencies {
     compile project(':library')
-    toolbarCompile project(':extras-toolbar');
-    abc_v21Compile project(':extras-toolbar')
 
-    compile 'com.android.support:support-v4:24.2.0'
-    compile 'com.android.support:cardview-v7:24.2.0'
+    compile 'com.android.support:support-v4:24.2.1'
+    compile "com.android.support:design:24.2.1"
 }
