--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@ GROUP=com.socros.android.lib
 POM_NAME=Material Menu
 POM_ARTIFACT_ID=material-menu
 POM_PACKAGING=aar
-POM_DESCRIPTION=Animations for Android L - drawer, back, dismiss and check icons
+POM_DESCRIPTION=Morphing Android menu, back, dismiss and check buttons
 POM_URL=https://github.com/sosite/material-menu
 POM_SCM_URL=https://github.com/sosite/material-menu
 POM_SCM_CONNECTION=scm:git@github.com:sosite/material-menu.git
